@@ -1,3 +1,8 @@
+2014-01-04 Niels Grewe <niels.grewe@halbordnung.de>
+
+	* Source/DKArgument.m: Decode byte arrays as NSData
+	if the introspection data says we should.
+
 2014-01-01 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Headers/DKStruct.h
